# Geny

./: .env.sample  .gitattributes  .gitignore  .gitmodules  CHAT_STREAMING_DEEP_ANALYSIS.md  README.md  docker-compose.dev-core.yml  docker-compose.dev.yml  docker-compose.prod-core.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  AGENT_IMPROVEMENT_PLAN.md  AUTONOMOUS_GRAPH_DEEP_DIVE.md  CHAT_AND_MESSENGER_REVIEW.md  Dockerfile  README.md  README_KO.md  TOOLS_INTEGRATION_ANALYSIS.md  main.py  pyproject.toml  requirements.txt  test_output.txt
backend/cache/tts/: _index.json
backend/controller/: admin_controller.py  agent_controller.py  agent_tasks_controller.py  agent_workspace_controller.py  auth_controller.py  chat_controller.py  claude_controller.py  command_controller.py  config_controller.py  cron_controller.py  curated_knowledge_controller.py  environment_controller.py  framework_settings_controller.py  hook_controller.py  internal_tool_controller.py  mcp_custom_controller.py  memory_controller.py  notifications_controller.py  permission_controller.py  shared_folder_controller.py  skills_controller.py  slash_commands_controller.py  tool_controller.py  tool_preset_controller.py  tts_controller.py  upload_controller.py  vtuber_controller.py  workflow_controller.py
backend/docs/: AUTONOMOUS_GRAPH_ANALYSIS.md  AUTONOMOUS_GRAPH_ANALYSIS_KO.md  AUTONOMOUS_GRAPH_OPTIMIZATION.md  AUTONOMOUS_GRAPH_OPTIMIZATION_KO.md  BOUND_WORKER.md  BOUND_WORKER_KO.md  CHAT.md  CHAT_KO.md  CONFIG.md  CONFIG_KO.md  COST_TRACKING_ANALYSIS.md  DATABASE.md  DATABASE_ARCHITECTURE.md  DATABASE_ARCHITECTURE_KO.md  DATABASE_KO.md  EXECUTION.md  EXECUTION_KO.md  LOGGING.md  LOGGING_KO.md  MCP.md  MCP_KO.md  MEMORY.md  MEMORY_KO.md  NEW_NODE_GUIDE.md  NODE_EXECUTION.md  NODE_INTERFACE.md  PROMPTS.md  PROMPTS_KO.md  README.md  SESSIONS.md  SESSIONS_KO.md  SHARED_FOLDER.md  SHARED_FOLDER_KO.md  SUB_WORKER.md  SUB_WORKER_KO.md  SUDO_COMPILER.md  SUDO_COMPILER_KO.md  TOOLS.md  TOOLS_KO.md  TOOL_SEARCH.md  (+2 more)
backend/docs/_archive/: README.md
backend/hooks/examples/: audit_log.sh  deny_rm_rf.sh  redact_secrets.py
backend/mcp/: README.md
backend/prompts/: README.md  README_KO.md  vtuber.md  worker.md
backend/prompts/templates/: geny-default.md  sub-worker-default.md  sub-worker-detailed.md
backend/prompts/vtuber_characters/: _shared_first_encounter.md  default.md
backend/service/: mcp_loader.py  tool_loader.py
backend/service/affect/: __init__.py  retriever.py  stm_retriever.py  summary.py
backend/service/agent_types/: registry.py
backend/service/auth/: __init__.py  auth_middleware.py  auth_models.py  auth_service.py
backend/service/chat/: conversation_store.py  inbox.py
backend/service/claude_manager/: __init__.py  constants.py  mcp_tools_server.py  models.py  platform_utils.py  process_manager.py  session_manager.py  session_store.py  sessions.json
backend/service/config/: __init__.py  base.py  manager.py
backend/service/credentials/: __init__.py  install.py
backend/service/cron/: __init__.py  install.py  store_postgres.py
backend/service/database/: chat_db_helper.py  memory_db_helper.py
backend/service/emit/: __init__.py  affect_tag_emitter.py  chain_install.py
backend/service/environment/: role_defaults.py  schemas.py  service.py  templates.py
backend/service/execution/: agent_executor.py
backend/service/executor/: __init__.py  agent_session.py  agent_session_manager.py  context_guard.py  default_manifest.py  geny_tool_provider.py  session_freshness.py  stage_manifest.py  tool_bridge.py
backend/service/game/: __init__.py
backend/service/hitl/: __init__.py  install.py
backend/service/hooks/: __init__.py  in_process.py  install.py
backend/service/langgraph/: agent_session.py  agent_session_manager.py  autonomous_graph.py  claude_cli_model.py  default_manifest.py  geny_tool_provider.py  state.py  tool_bridge.py
backend/service/lifecycle/: __init__.py  ws_abandoned_detector.py
backend/service/logging/: __init__.py  session_logger.py  tool_detail_formatter.py
backend/service/memory/: __init__.py  curated_knowledge.py  curation_scheduler.py  embedding.py  frontmatter.py  global_memory.py  index.py  long_term.py  manager.py  migrator.py  short_term.py  structured_writer.py  user_opsidian.py  vector_memory.py  vector_store.py
backend/service/memory_provider/: config.py
backend/service/notifications/: channel_factory.py  install.py
backend/service/permission/: __init__.py  install.py
backend/service/persist/: __init__.py  install.py  restore.py
backend/service/persona/: __init__.py  blocks.py  blocks_resolver.py  character_provider.py  dynamic_builder.py  provider.py
backend/service/plugin/: __init__.py  protocol.py  registry.py  tamagotchi.py
backend/service/progression/: __init__.py  selector.py
backend/service/prompt/: __init__.py  protocols.py  sections.py
backend/service/redis/: redis_client.py
backend/tests/: conftest.py
backend/tool_presets/: preset-coding.json  preset-full.json  preset-minimal.json  preset-research.json  template-all-tools.json  template-full-development.json  template-minimal.json  template-web-research.json
backend/tools/: _mcp_server.py  _proxy_mcp_server.py  browser_tools.py  manager_tools.py  tool_search_tools.py  web_fetch_tools.py  web_search_tools.py
backend/workflows/: .gitignore  16d0f489-ce28-4b41-93af-57c7bdeb13fb.json  template-autonomous.json  template-simple.json
backend/ws/: __init__.py  chat_stream.py  execute_stream.py
omnivoice/: .dockerignore  Dockerfile  README.md  README_KO.md  pyproject.toml
omnivoice/docs/: api_contract.md  architecture.md  upstream_sync.md  voice_profile_format.md
omnivoice/omnivoice_core/: __init__.py
omnivoice/scripts/: bench_to_md.py  check_memory_residency.py  run_bench.sh  staging_gate.sh  texts_en.txt  texts_ko.txt  texts_smoke.txt
omnivoice/server/: __init__.py  api.py  bench.py  compare_audio.py  diagnostics.py  engine.py  host_pool.py  main.py  schemas.py  settings.py  streaming.py  text_split.py  voices.py
(+923 files in other folders)
