[project]
name = "geny"
version = "1.0.0"
description = "Geny (Geny Execute, Not You) - Autonomous Multi-Agent System"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    # Vector search
    "faiss-cpu>=1.9.0",
    "numpy>=1.26.0",
    # File pattern matching
    "pathspec>=0.12.0",
    # PostgreSQL database
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    # Web search
    "ddgs==9.11.4",
    # Web fetch & browser automation
    "playwright>=1.49.0",
    # WebSocket protocol
    "websockets>=13.0",
    # geny-executor: Pipeline-based execution engine
    # 0.36.x (executor uplift Phase 4 Weeks 7-8): Skills system lands in
    # inline-execution form. Adds geny_executor.skills subpackage — SKILL
    # .md frontmatter parser, loader, registry, SkillTool + SkillToolProvider
    # (plugs into Pipeline.from_manifest_async via the ToolProvider Protocol
    # shipped in 0.35.0). pyyaml>=6.0 becomes a core dep. All additive;
    # existing AgentSession usage unaffected.
    # 0.40.x (executor uplift Phase 7 sprint batch S7.1 + S7.2 + S7.3):
    # - DynamicPersonaPromptBuilder + PersonaProvider Protocol promoted
    #   into the executor (Geny's existing service.persona.* can
    #   migrate to a thin re-export later).
    # - MCPResourceRetriever — Stage 2 can now pull MCP resources as
    #   memory chunks, complementing tool consumption.
    # - StructuredOutputParser schema contract — three named outcomes
    #   (clean / parse-failed / schema-mismatched) on
    #   ParsedResponse.structured_output_error.
    # All surfaces are independently opt-in; without consuming any of
    # them, dispatch + prompt assembly + parsing all behave
    # identically to 0.39.x.
    "geny-executor[web]>=0.40.0,<0.41.0",
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    # Auth
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
